--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TwoCommaQuotes" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TwoCommaQuotes" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -28,12 +28,56 @@
         <item name="android:fontWeight" tools:targetApi="o">500</item>
     </style>
 
+    <style name="textStyleMedium12">
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:fontFamily">@font/inter_medium</item>
+        <item name="android:textColor">@color/colorGray</item>
+        <item name="android:fontWeight" tools:targetApi="o">500</item>
+    </style>
+
     <style name="textStyleSemiBold8">
         <item name="android:textSize">@dimen/_8ssp</item>
         <item name="android:fontFamily">@font/inter_semi_bold</item>
         <item name="android:textColor">@color/colorGray</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:fontWeight" tools:targetApi="o">600</item>
+    </style>
+
+    <style name="textStyleSemiBold14">
+        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:fontFamily">@font/inter_semi_bold</item>
+        <item name="android:textColor">@color/colorGray</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:fontWeight" tools:targetApi="o">600</item>
+    </style>
+
+    <style name="textStyleBold10">
+        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="android:fontFamily">@font/inter_bold</item>
+        <item name="android:textColor">@color/colorGray</item>
+        <item name="android:fontWeight" tools:targetApi="o">700</item>
+    </style>
+
+    <style name="textStyleBold14">
+        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:fontFamily">@font/inter_bold</item>
+        <item name="android:textColor">@color/colorGray</item>
+        <item name="android:fontWeight" tools:targetApi="o">700</item>
+    </style>
+
+
+    <style name="customButtonStyle" parent="textStyleMedium12">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/_40sdp</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:background">@drawable/bg_solid_gray_radius_10</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="AppTheme.Theme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:statusBarColor">@color/colorSoftGray</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
     </style>
 
 </resources>
