--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TwoCommaQuotes" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.TwoCommaQuotes" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/colorWhite</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/colorBlack</item>
+<!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
     </style>
 
@@ -64,7 +67,6 @@
         <item name="android:textColor">@color/colorGray</item>
         <item name="android:fontWeight" tools:targetApi="o">700</item>
     </style>
-
 
     <style name="customButtonStyle" parent="textStyleMedium12">
         <item name="android:layout_width">match_parent</item>
